<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/aboutus"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#dedede" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:maxHeight="200dp"
                android:maxWidth="200dp"
                android:paddingTop="10dp"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede" />
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/versions"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/versionsmessage"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:textSize="15sp" />
				</RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede" />
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/functionintroduce"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/functionintroduce"
                    android:textSize="18sp" />
                <TextView
                    android:layout_below="@id/functionintroduce"
                    android:id="@+id/functionmessage"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/functionmessage"
                    android:textSize="15sp" />
				</RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/help"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/help"
                    android:textSize="18sp" />
                <TextView
                    android:layout_below="@id/help"
                    android:id="@+id/helpmessage"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpmessage"
                    android:textSize="15sp" />
				</RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/callus"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/callus"
                    android:textSize="18sp" />
                <TextView
                    android:layout_below="@id/callus"
                    android:id="@+id/callusmessage"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usmessage"
                    android:textSize="15sp" />
				</RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede" />
            </TableLayout>
            
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/copyright"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>